# AniPlux

./: Plugin-Development.md  README.md  pyproject.toml  usage.md
aniplux/: __init__.py  __main__.py
aniplux/cli/: __init__.py  config_backup.py  config_editor.py  config_help.py  config_preview.py  config_wizard.py  context.py  download_manager.py  download_utils.py  episode_browser.py  episode_display.py  episode_navigation.py  main.py  search_display.py  search_engine.py  search_interactive.py  source_config.py  source_manager.py  startup.py
aniplux/cli/commands/: __init__.py  config.py  doctor.py  download.py  episodes.py  info.py  search.py  sources.py
aniplux/core/: __init__.py  aria2c_downloader.py  config_cli.py  config_defaults.py  config_manager.py  config_schemas.py  config_utils.py  downloader.py  exceptions.py  models.py  plugin_manager.py  utils.py
aniplux/plugins/: __init__.py  animetsu_plugin.py  base.py  hianime_plugin.py  sample_plugin.py
aniplux/plugins/animetsu/: __init__.py  api.py  config.py  downloader.py  parser.py  plugin.py
aniplux/plugins/common/: __init__.py  utils.py
aniplux/plugins/hianime/: __init__.py  config.py  downloader.py  extractor.py  parser.py  plugin.py  registry.py  selenium_config.py  utils.py
aniplux/ui/: __init__.py  components.py  console.py  error_handler.py  progress.py  styling.py  themes.py
assets/: __init__.py  banner.txt
config/: __init__.py  settings.json  sources.json
